--- a/src/index.html
+++ b/src/index.html
@@ -104,17 +104,17 @@
             </div>
             <div class="img-list">
                 <figure class="img-item">
-                    <img class="img-item__foto" src="./img/about/comp.png" alt="img">
+                    <img class="img-item__foto" src="./img/about/comp.jpg" alt="img">
                     <span class="img-item__icon">&#xe90f;</span>
                     <figcaption class="img-item__text">Lorem ipsum 1</figcaption>
                 </figure>
                 <figure class="img-item">
-                    <img class="img-item__foto" src="./img/about/phone.png" alt="img">
+                    <img class="img-item__foto" src="./img/about/phone.jpg" alt="img">
                     <span class="img-item__icon">&#xe90c;</span>
                     <figcaption class="img-item__text">Lorem ipsum 2</figcaption>
                 </figure>
                 <figure class="img-item img-item_margin-r-0">
-                    <img class="img-item__foto" src="./img/about/flower.png" alt="img">
+                    <img class="img-item__foto" src="./img/about/flower.jpg" alt="img">
                     <span class="img-item__icon">&#xe910;</span>
                     <figcaption class="img-item__text">Lorem ipsum 3</figcaption>
                 </figure>
